docs: restructure and harmonise to a scientific writing style
A single pass over the project's English-language documentation,
keeping the French internal specifications under doc/specs/
untouched per the language policy.

Restructure
- doc/pitch.md → doc/concepts/overview.md (rename + rewrite).
- doc/traceability.md → doc/concepts/traceability.md (move + rewrite).
- doc/architecture.md (new) — single-page system architecture.
- CONTRIBUTING.md (new) — contributor conventions, language policy,
  DoD gate, branching model.

Rewrite
- README.md as the canonical entry point: status table, quickstart,
  architecture summary, audience-segmented documentation links,
  citation entry.
- doc/user/{README,getting-started,regimes}.md harmonised; per-regime
  "Available since: iteration N" annotations removed; informal
  expressions ("yak shave", "footgun", "premium showcase") replaced
  with sober equivalents.
- doc/user/{scenario-reference,cli-reference}.md lightly retouched.
- doc/process/orchestration.md updated for the new traceability path
  and minor wording.

CHANGELOG.md gains an [Unreleased] entry recording the restructuring.

No code change; no test impact; no spec change.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>