@@ -1,30 +1,32 @@
 # GC-Forge
 
-Declarative generator of **Java GC logs** — the counterpart to [GC-Insight](#).
+A declarative generator of Java garbage-collection logs. From a
+typed YAML scenario describing a `(JVM, GC algorithm, application
+regime)` tuple, GC-Forge runs a parameterised workload on a real
+Java Virtual Machine, captures the unified `-Xlog:gc*` output, and
+emits a hash-anchored manifest sufficient to reproduce the run.
 
-Where Insight observes, Forge fabricates: from a YAML description of a `(JVM, GC algorithm, application regime)` scenario, GC-Forge produces on demand a faithful native GC log, accompanied by a reproducible identity card.
+GC-Forge is the counterpart of [GC-Insight](#): where Insight
+analyses GC logs, Forge produces them on demand with documented
+ground truth.
 
-## Project status
+## Status
 
-**0.1.0 — first MVP release.** The seven MVP regimes are implemented,
-fourteen presets ship in-tree, and every CLI subcommand
-(`lint`, `run`, `validate`, `batch`, `presets`, `selftest`,
-`variance-check`) is operational. The release pipeline
-(`.github/workflows/release.yml`) builds prebuilt CLI binaries for
-Linux x86_64/aarch64 and macOS x86_64/aarch64, publishes the six
-`gc-forge-*` crates to crates.io, and pushes a multi-arch
-`ghcr.io/<org>/gc-forge` image — all gated on a manual approval on
-the `release` GitHub environment.
+Version `0.1.0` — first MVP release.
 
-User documentation lives under [`doc/user/`](./doc/user/README.md).
-Internal specifications (in French) live under
-[`doc/specs/`](./doc/specs/):
+| Item                | Coverage                                                        |
+|---------------------|-----------------------------------------------------------------|
+| Application regimes | 7 (steady-state, burst, humongous, slow-leak, cache-churn, mixed-GC pathological, microservice stop-and-go) |
+| GC collectors       | 3 (G1, generational ZGC, Parallel)                              |
+| JVM distributions   | Eclipse Temurin 17 and 21                                       |
+| Shipped presets     | 14 (embedded in the binary)                                     |
+| CLI subcommands     | `lint`, `run`, `validate`, `batch`, `presets`, `selftest`, `variance-check` |
+| Wire formats        | `gc-forge/scenario.v1`, `gc-forge/run-manifest.v1`, `gc-forge/matrix.v1` |
+| Runner              | Docker (native runner planned for V1)                           |
+| Licence             | [MIT](LICENSE)                                                  |
 
-- [Functional specifications](./doc/specs/SPEC-FONCTIONNELLE.md)
-- [Technical specifications](./doc/specs/SPEC-TECHNIQUE.md)
-- [Roadmap](./doc/specs/ROADMAP.md)
-- [Initial backlog](./doc/specs/BACKLOG.md)
-- [Risks and open points](./doc/specs/RISQUES.md)
+A summary of the rationale behind these choices is given in
+[`doc/concepts/overview.md`](doc/concepts/overview.md).
 
 ## Quickstart
 
@@ -44,43 +46,94 @@ gc-forge validate out/steady-g1-baseline-c0ffee.log \
     --manifest  out/steady-g1-baseline-c0ffee.manifest.yaml
 ```
 
-A walk-through with troubleshooting tips is in
-[`doc/user/getting-started.md`](./doc/user/getting-started.md);
-the full CLI surface is in
-[`doc/user/cli-reference.md`](./doc/user/cli-reference.md).
+A guided walk-through of the same path, with troubleshooting notes,
+is provided in
+[`doc/user/getting-started.md`](doc/user/getting-started.md).
 
-## Use cases
+## Documentation
 
-1. **Testing and validating GC-Insight** — produce reference logs with ground truth.
-2. **Sales demos** — ready-to-use catalog of "speaking" logs.
-3. **Education and content** — articles, tutorials, training material.
-4. **Pathology reproduction** — mirror a GC behavior observed in production.
-5. **ML datasets** — feed classification or anomaly-detection models.
+The documentation is organised by audience.
 
-## Scenario at a glance
+### For users
 
-```yaml
-# scenarios/humongous-pressure-g1.yaml
-apiVersion: gc-forge/scenario.v1
-kind: Scenario
-metadata:
-  name: humongous-pressure-g1
-  description: G1 under humongous allocation pressure (>50% region).
-spec:
-  jvm: { vendor: temurin, major: 21 }
-  gc:
-    algorithm: G1
-    heap: { min: 2g, max: 2g }
-    options: ["-XX:G1HeapRegionSize=4M"]
-  regime:
-    kind: humongous-pressure
-    parameters:
-      humongous_ratio: 0.6
-      allocation_rate_mb_s: 80
-  duration: 90s
-  seed: 0xC0FFEE
+- [`doc/user/getting-started.md`](doc/user/getting-started.md) —
+  install, run a first preset, read the manifest.
+- [`doc/user/regimes.md`](doc/user/regimes.md) — the seven MVP
+  regimes, their parameters, expected signatures, and shipped
+  presets.
+- [`doc/user/scenario-reference.md`](doc/user/scenario-reference.md)
+  — the YAML schema (`apiVersion`, `metadata`, `spec.gc`,
+  `spec.jvm`, `spec.regime`, `extends`, override syntax).
+- [`doc/user/cli-reference.md`](doc/user/cli-reference.md) —
+  every subcommand, flags, defaults and exit codes.
+
+### For contributors and integrators
+
+- [`doc/architecture.md`](doc/architecture.md) — runtime and
+  build-time architecture.
+- [`doc/concepts/overview.md`](doc/concepts/overview.md) — design
+  goals and non-goals.
+- [`doc/concepts/traceability.md`](doc/concepts/traceability.md)
+  — phenomenon × preset × analyser-detector matrix.
+- [`doc/process/orchestration.md`](doc/process/orchestration.md)
+  — development process, role rotation, Definition-of-Done gate.
+- [`CONTRIBUTING.md`](CONTRIBUTING.md) — contribution conventions.
+- [`CHANGELOG.md`](CHANGELOG.md) — release history.
+
+### Internal product specifications (French)
+
+The framing documents authored during the design phase are
+preserved in their original language. Day-to-day use of GC-Forge
+does not require reading them.
+
+- [`doc/specs/SPEC-FONCTIONNELLE.md`](doc/specs/SPEC-FONCTIONNELLE.md)
+- [`doc/specs/SPEC-TECHNIQUE.md`](doc/specs/SPEC-TECHNIQUE.md)
+- [`doc/specs/ROADMAP.md`](doc/specs/ROADMAP.md)
+- [`doc/specs/BACKLOG.md`](doc/specs/BACKLOG.md)
+- [`doc/specs/RISQUES.md`](doc/specs/RISQUES.md)
+
+## Architecture, in brief
+
+GC-Forge consists of a Rust workspace that compiles to a single
+`gc-forge` binary, and a Java workload harness packaged as a
+shaded JAR. The two artefacts communicate exclusively through the
+JVM command line: GC-Forge produces an `argv` for `java`, the JVM
+emits a unified `-Xlog:gc*` log to a file, and GC-Forge reads the
+file back. There is no embedded protocol.
+
+The Rust workspace is split into six crates with an acyclic
+dependency graph:
+
+```
+scenario  ←  regimes  ←  runner  ←  validate  ←  presets  ←  cli
 ```
 
-## License
+A full description, including the runner subsystem and the wire
+formats, is given in [`doc/architecture.md`](doc/architecture.md).
 
-[MIT](./LICENSE).
+## Citing GC-Forge
+
+If GC-Forge contributes to a published work, please cite it as:
+
+> Ramette, J. (2026). *GC-Forge: a declarative generator of Java
+> garbage-collection logs* (Version 0.1.0). MIT licence. Available
+> at https://github.com/jerome-ramette/gc-forge.
+
+A versioned BibTeX entry will be added once a DOI is assigned.
+
+## Contributing
+
+Contributions are welcome under the project's MIT licence; see
+[`CONTRIBUTING.md`](CONTRIBUTING.md) for the conventions used by
+the project, including the documentation language policy
+(English for user-facing material, French for internal
+specifications), the Definition-of-Done gate, and the branching
+model.
+
+Bug reports are tracked in GitHub Issues. A bug report is most
+useful when accompanied by the relevant section of the manifest
+produced by the failing run.
+
+## Licence
+
+[MIT](LICENSE).
